Expand interest rect with padding in root space, not local layer space.

Root space is almost the same thing as pixel space, the padding is intended
to be in terms of screen pixels, and the heuristic is optimized for content which
does not have large scales.

This change also fixes an bug in which content with a very small scale
transform failed to draw, because its interest rect did not cover a single screen-
space tile.

Bug: 713150
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I4bf07b05b68d53751ab388ad905a5e333336262d
Reviewed-on: https://chromium-review.googlesource.com/628641
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Vladimir Levin <vmpstr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496956}
Former-commit-id: 3171659ead3e26b743effcdd6cc22d43e48a16e1